--- a/client/package.json
+++ b/client/package.json
@@ -9,17 +9,27 @@
   },
   "dependencies": {
     "@rainbow-me/rainbowkit": "^2.2.8",
-    "@tanstack/react-query": "^5.55.3",
+    "@tanstack/react-query": "^5.86.0",
+    "@tanstack/react-query-devtools": "^5.86.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.23.12",
+    "lucide-react": "^0.542.0",
     "next": "^15.3.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hot-toast": "^2.6.0",
+    "tailwind-merge": "^3.3.1",
     "viem": "2.29.2",
-    "wagmi": "^2.15.6"
+    "wagmi": "^2.15.6",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@types/node": "^20.14.8",
     "@types/react": "^19.1.8",
+    "autoprefixer": "^10.4.21",
     "eslint-config-next": "^15.1.7",
+    "tailwindcss": "^3.4.17",
     "typescript": "5.5.4"
   }
 }
