--- a/server/relayer/package.json
+++ b/server/relayer/package.json
@@ -10,7 +10,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^17.2.2",
-    "ethers": "^6.15.0"
+    "ethers": "^6.15.0",
+    "express": "^4.21.2"
   }
 }
