--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "@radix-ui/react-slider": "^1.3.6",
     "@rainbow-me/rainbowkit": "^2.2.8",
+    "@react-three/drei": "^10.7.4",
+    "@react-three/fiber": "^9.3.0",
     "@tanstack/react-query": "^5.86.0",
     "@tanstack/react-query-devtools": "^5.86.0",
     "class-variance-authority": "^0.7.1",
@@ -21,6 +23,7 @@
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.6.0",
     "tailwind-merge": "^3.3.1",
+    "three": "^0.180.0",
     "viem": "2.29.2",
     "wagmi": "^2.15.6",
     "zustand": "^5.0.8"
